clusters/k3s-home/apps/media/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-http-route
  namespace: media
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "plex.fletcherlabs.com"
  rules:
    - backendRefs:
        - name: plex
          port: 32400
