clusters/k3s-home/apps/media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
spec:
  ingressClassName: cilium
  rules:
    - host: plex.fletcherlabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
